--- a/.github/workflows/examples-efr32.yaml
+++ b/.github/workflows/examples-efr32.yaml
@@ -94,7 +94,8 @@ jobs:
                       ${{ env.BUILD_TYPE }}-example-build-${{
                       steps.outsuffix.outputs.value }}
                   path: |
-                      out/
+                       out/lighting_app_debug_rpc/BRD4161A/chip-efr32-lighting-example.s37
+#                      out/
 #                      out/lock_app_debug/BRD4161A/chip-efr32-lock-example.out
 #                      out/lock_app_debug/BRD4161A/chip-efr32-lock-example.out.map
 #                      out/lock_app_debug/BRD4161A/chip-efr32-lock-example.out
