--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -59,7 +59,7 @@ jobs:
                 ./scripts/run_in_build_env.sh \
                   "./scripts/build/build_examples.py --platform android build"
             - name : upload apk
-              uses: actions/upload-artifact@master
+              uses: actions/upload-artifact@v2
               if: always()
               with:
                 name: CHIPTool_apk
