--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -63,4 +63,4 @@ jobs:
               if: always()
               with:
                 name: CHIPTool_apk
-                path: src/android/CHIPTool/app/build/outputs/apk/
+                path: out
