--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -102,3 +102,9 @@ jobs:
               env:
                 BUILD_TYPE: android_x64
                 TARGET_CPU: x64
+            - name : upload apk
+              uses: actions/upload-artifact@v2
+              if: always()
+              with:
+                name: CHIPTool_apk
+                path: src/android/CHIPTool/app/build/outputs/apk/
