--- a/.github/workflows/examples-nrfconnect.yaml
+++ b/.github/workflows/examples-nrfconnect.yaml
@@ -95,6 +95,7 @@ jobs:
             - name: Copy aside build products
               run: |
                   mkdir -p /tmp/output_binaries/$BUILD_TYPE-build
+                  cp examples/lock-app/nrfconnect/build/ /tmp/output_binaries/$BUILD_TYPE-build/
                   cp examples/lock-app/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
                       /tmp/output_binaries/$BUILD_TYPE-build/chip-lock.elf
                   cp examples/shell/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
@@ -116,8 +117,8 @@ jobs:
                   name:
                       ${{ env.BUILD_TYPE }}-example-build-${{
                       steps.outsuffix.outputs.value }}
-                  # path: /tmp/output_binaries/${{ env.BUILD_TYPE }}-build
-                  path: examples/lighting-app/nrfconnect/build/
+                  path: /tmp/output_binaries/${{ env.BUILD_TYPE }}-build
+                  #path: examples/lighting-app/nrfconnect/build/
                         
 
             # https://github.com/project-chip/connectedhomeip/issues/3100
