--- a/.github/workflows/examples-nrfconnect.yaml
+++ b/.github/workflows/examples-nrfconnect.yaml
@@ -118,7 +118,8 @@ jobs:
                   name:
                       ${{ env.BUILD_TYPE }}-example-build-${{
                       steps.outsuffix.outputs.value }}
-                  path: /tmp/output_binaries/${{ env.BUILD_TYPE }}-build
+                  path: /tmp/output_binaries/
+                  #path: /tmp/output_binaries/${{ env.BUILD_TYPE }}-build
                   #path: examples/lighting-app/nrfconnect/build/
                         
 
