--- a/.github/workflows/examples-telink.yaml
+++ b/.github/workflows/examples-telink.yaml
@@ -43,3 +43,9 @@ jobs:
                   submodules: true
             - name: Build example Telink Lighting App on TLSR9518ADK80D
               run: scripts/examples/telink_example.sh lighting-app tlsr9518adk80d
+           - name : upload bin
+             uses: actions/upload-artifact@master
+             if: always()
+             with:
+               name: telink_Light
+               path: examples/lighting-app/telink/build/tlsr9518adk80d/zephyr/zephyr.bin
