--- a/.github/workflows/examples-nrfconnect.yaml
+++ b/.github/workflows/examples-nrfconnect.yaml
@@ -96,11 +96,12 @@ jobs:
               run: |
                   mkdir -p /tmp/output_binaries/$BUILD_TYPE-build
                   cp -r examples/lock-app/nrfconnect/build/ /tmp/output_binaries/$BUILD_TYPE-build/
+                  cp examples/lock-app/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
+                      /tmp/output_binaries/$BUILD_TYPE-build/chip-lock.elf
+                  cp examples/shell/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
+                      /tmp/output_binaries/$BUILD_TYPE-build/chip-shell.elf
                 #  cp -r examples/lock-app/nrfconnect/build/ /tmp/output_binaries/
-                # cp examples/lock-app/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
-                  #     /tmp/output_binaries/$BUILD_TYPE-build/chip-lock.elf
-                  # cp examples/shell/nrfconnect/build/nrf52840dk_nrf52840/zephyr/zephyr.elf \
-                  #     /tmp/output_binaries/$BUILD_TYPE-build/chip-shell.elf
+
             # - name: test
             #   run: |
             #       pwd
@@ -118,8 +119,8 @@ jobs:
                   name:
                       ${{ env.BUILD_TYPE }}-example-build-${{
                       steps.outsuffix.outputs.value }}
-                  #path: /tmp/output_binaries/
                   path: /tmp/output_binaries/${{ env.BUILD_TYPE }}-build
+                  #path: /tmp/output_binaries/
                   #path: examples/lighting-app/nrfconnect/build/
                         
 
